fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,14 +26,12 @@ input[type=number] {
 }
 ::-webkit-scrollbar {
   width: 10px;
+
 }
-::-webkit-scrollbar-track {
-  width: 10px;
-  background:transparent;
-}
+
 ::-webkit-scrollbar-thumb {
   background:black;
-  border-radius:20px
+  border-radius:20px;
 }
 
 
